# OpenGLCraft

./: README.md
src/: CMakeLists.txt  block.cpp  block.hpp  blockArray.cpp  blockArray.hpp  blockUtils.cpp  blockUtils.hpp  chunk.cpp  chunk.hpp  droppedBlock.cpp  droppedBlock.hpp  inventory.cpp  inventory.hpp  loadObj.cpp  loadObj.hpp  loadShaders.cpp  loadTexture.cpp  loadTexture.hpp  main.cpp  ray.cpp  ray.hpp  resourceManager.cpp  resourceManager.hpp  saveManager.cpp  saveManager.hpp  structs.cpp  structs.hpp  text.cpp  text.hpp  worldGenerator.cpp  worldGenerator.hpp
src/blocks/: axe.cpp  axe.hpp  block.cpp  block.hpp  blocks.hpp  chest.cpp  chest.hpp  dirt.cpp  dirt.hpp  fire.cpp  fire.hpp  furnace.cpp  furnace.hpp  grass.cpp  grass.hpp  iron.cpp  iron.hpp  ironOre.cpp  ironOre.hpp  leaves.cpp  leaves.hpp  pickaxe.cpp  pickaxe.hpp  recipe.cpp  recipe.hpp  recipes.cpp  recipes.hpp  shovel.cpp  shovel.hpp  stick.cpp  stick.hpp  stone.cpp  stone.hpp  wood.cpp  wood.hpp
src/gui/: chestGUI.cpp  chestGUI.hpp  craftingGUI.cpp  craftingGUI.hpp  furnaceGUI.cpp  furnaceGUI.hpp  gui.cpp  gui.hpp  guiBase.hpp  guiImage.cpp  guiImage.hpp  itemField.cpp  itemField.hpp  itemStack.cpp  itemStack.hpp
src/libs/: CMakeLists.txt
src/shaders/: gui.vertexshader  object.fragmentshader  object.vertexshader  text.fragmentshader  text.vertexshader
src/textures/: chest.dds  craftinggrid.dds  crosshair.dds  dirt.dds  fire.dds  font.dds  furnace.dds  grass.dds  iron.dds  ironOre.dds  itembar.dds  itembarselected.dds  leaves.dds  stick.dds  stone.dds  stoneAxe.dds  stonePickaxe.dds  stoneShovel.dds  wood.dds  woodenAxe.dds  woodenPickaxe.dds  woodenShovel.dds
src/textures/damageMasks/: 1.dds  2.dds  3.dds  4.dds  5.dds  6.dds  7.dds  8.dds
